# Yope3D

./: .gitignore  README.md  commit_names.sh  generate_milestone_reports.sh  roadmap.md
v2/Yope3D/: .gitignore  CMakeLists.txt  CMakePresets.json  articlePlan.txt  audioSerialization.json  buildProcessWindows.txt  cmake_debug.txt  cmake_output.txt  composite-behaviors.md  imgui.ini  limitations.md  milestone6plan.md  physics_test_cases.md  roadmap.md  scene.json  scene2.json  scene3.json  scripting-notes.md  scriptingTesting.json  testScript.py  testSerialization.json  test_character.json  vcpkg.json  yope.cfg  yope3d.cfg  yope3d_phase2_design.md
v2/Yope3D/.github/workflows/: deploy-site.yml
v2/Yope3D/assets/colliders/: testLevel_1.bcbvh  testLevel_6.bcbvh  testTable_15.bcbvh
v2/Yope3D/assets/fonts/: extract_bold.py
v2/Yope3D/assets/models/: rigidAnimatedCube.glb  testLevel.glb  testTable.glb
v2/Yope3D/assets/prefabs/: car.ytemplated  table.ytemplated  wheel.ytemplated
v2/Yope3D/assets/scenes/: _audio_smoketest.json  _platformerSmoketest.json  actionsSmoketest.json  article2_doom.json  article2_smoothness.json  attachScriptDemo.json  chessScene.json  compositeSmoketest.json  jointSerializerTest.json  logo_test.json  physicsExtrasSmoketest.json  physicsGallery.json  platformerJavaEra.json  ragdollDemo.json  sandbox.json  sandboxGallery.json  savegameSmoketest.json  scene.json  scene.json 13-09-51-784.json  scene.json 21-33-08-796.json  scriptingTesting.json  settingsSmoketest.json  startup.json  stress.json  testCompoundShapeLevel.json  test_character.json  tier1Smoketest.json  tier2Smoketest.json  tier3Smoketest.json  trailerJavaEra.json  triggerVolumeDemo.json  uiOverhaulDemo.json  vehicleDemo.json
v2/Yope3D/cmake/: Info.plist  Info.plist.in
v2/Yope3D/docs/: mkdocs.yml  requirements-docs.txt
v2/Yope3D/docs/content/: index.md
v2/Yope3D/old_src_shaders/: raytracer.comp
v2/Yope3D/scripts/behaviors/: _actions.py  _actions_smoketest.py  _audio_smoketest.py  _composite_smoketest.py  _debug.py  _events.py  _gallery.py  _physics_extras_smoketest.py  _platformer_smoketest.py  _savegame_smoketest.py  _settings_smoketest.py  _tier1_smoketest.py  _tier2_smoketest.py  _tier3_smoketest.py  _timers.py  article2_doom.py  article2_smoothness.py  attach_script_demo.py  character_controller.py  full_logo_playback.py  half_torus_compound_test.py  logo_playback.py  mouse_drag_ragdoll.py  physics_gallery.py  platformer_java_era.py  platformer_logic.py  ragdoll_generator.py  sandbox_gallery.py  stress_test.py  testing_script.py  trailer_java_era.py  trigger_volume_demo.py  ui_pause_menu_demo.py  vehicle_demo.py
v2/Yope3D/shaders/: fullscreen.frag  fullscreen.vert  id_buffer.frag  id_buffer.vert  id_buffer_ui.frag  id_buffer_ui.vert  line3d.vert  raytracer.comp  shadow_depth.vert  skybox.frag  skybox.vert  stroke.frag  stroke.vert  text3d.frag  text3d.vert  triangle.frag  triangle.vert  ui.frag  ui.vert
v2/Yope3D/site/: README.md  astro.config.mjs  package-lock.json  package.json
v2/Yope3D/site/src/: content.config.ts
v2/Yope3D/src/: Engine.cpp  Engine.h  main.cpp  main_editor.cpp  stb_impl.cpp  stb_vorbis_wrapper.h
v2/Yope3D/src/assets/: AnimationClip.h  AssetManager.cpp  AssetManager.h  AssetResolve.cpp  AssetResolve.h  AudioLoader.cpp  AudioLoader.h  GltfLoader.cpp  GltfLoader.h  ImageLoader.cpp  ImageLoader.h  ObjLoader.cpp  ObjLoader.h  Primitives.cpp  Primitives.h  TextureStreamer.cpp  TextureStreamer.h
v2/Yope3D/src/audio/: AudioSystem.cpp  AudioSystem.h  Listener.cpp  Listener.h  MusicStream.cpp  MusicStream.h  Source.cpp  Source.h
v2/Yope3D/src/debug/: Console.cpp  Console.h  Profiler.cpp  Profiler.h  TaskProgress.cpp  TaskProgress.h
v2/Yope3D/src/ecs/: Archetype.h  ComponentArray.h  Components.h  Entity.h  Registry.cpp  Registry.h  TypeId.h  View.h
v2/Yope3D/src/editor/: CommandHistory.cpp  CommandHistory.h  EditorApp.cpp  EditorApp.h  EditorContext.h  EditorPanel.h  EditorTheme.cpp  EditorTheme.h  FileDialog.cpp  FileDialog.h  ImGuiBackend.cpp  ImGuiBackend.h  Selection.cpp  Selection.h
v2/Yope3D/src/gpu/: Buffer.cpp  Buffer.h  ComputePipeline.cpp  ComputePipeline.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  GpuDevice.cpp  GpuDevice.h  LineBuffer.cpp  LineBuffer.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  ShaderModule.cpp  ShaderModule.h  StorageBuffer.cpp  StorageBuffer.h  StorageImage.cpp  StorageImage.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Text3DBuffer.cpp  Text3DBuffer.h  Texture.cpp  Texture.h  UIBuffer.cpp  UIBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VulkanInstance.cpp  VulkanInstance.h
v2/Yope3D/src/math/: Mat3.h  Mat4.h  Math.h  MathImpl.cpp  OctEncode.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
v2/Yope3D/src/physics/: Barrier.h  BarrierHull.cpp  BarrierHull.h  BoundedBarrier.h  BroadphaseSAP.cpp  BroadphaseSAP.h  CAABB.cpp  CAABB.h  COBB.cpp  COBB.h  CSphere.cpp  CSphere.h  ColliderAnalytical.cpp  ColliderAnalytical.h  ColliderCCD.cpp  ColliderCCD.h  ColliderDiscrete.cpp  ColliderDiscrete.h  ColliderGJK.cpp  ColliderGJK.h  ColliderGeom.h  ColliderSupports.cpp  ColliderSupports.h  ColliderTypes.h  CollisionLayers.h  CollisionTree.cpp  CollisionTree.h  CompoundShape.cpp  CompoundShape.h  ContactCache.h  ContactInfo.h  DebugShapes.h  Hull.cpp  Hull.h  IslandDetector.cpp  IslandDetector.h  Joint.h  KinematicQuery.cpp  KinematicQuery.h  PhysicsConstants.h  (+6 more)
v2/Yope3D/src/platform/: BundlePaths.cpp  BundlePaths.h  FileWatcher.cpp  FileWatcher.h  Input.cpp  Input.h  (+2 more)
v2/Yope3D/tests/: ecs_bench.cpp  ecs_tests.cpp  gltf_tests.cpp  math_tests.cpp  package_version_tests.cpp  physics_tests.cpp  sphere_and_aabb_tests.cpp  sphere_tests.cpp  text_layout_tests.cpp
v2/Yope3D/tools/: analyze_profile.py  build_docs.sh  embed_assets.py  embed_manifest.txt  logo_camera_center.py  logo_export.py  logo_export_part1.py  logo_occlusion_debug.py  logo_pack.py  make_bundle.sh  msdf_bake.cpp  run_scaling_sweep.sh
(+296 files in other folders)
